--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -14,8 +14,8 @@
    </head>
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
-      <p>Imvertor: 1.67.1</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20221011-151724</p>
+      <p>Imvertor: Nightly-build.8</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230627-050904</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -247,9 +247,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td>
-                                 KvK-nummer
-                                 </td>
+                              <td>KvK-nummer</td>
                            </tr>
                            <tr>
                               <th>Regels</th>
@@ -306,9 +304,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_KaderAanlevering">
-                                    KaderAanlevering
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_KaderAanlevering">KaderAanlevering</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -412,9 +408,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_KwaliteitsnormInrichting">
-                                    KwaliteitsnormInrichting
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_KwaliteitsnormInrichting">KwaliteitsnormInrichting</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -529,9 +523,11 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td>
-                                 InitiëleFunctie
-                                 </td>
+                              <td><a class="link" href="#detail_class_Model_InitileFunctie">InitiëleFunctie</a></td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Type</th>
+                              <td>Waardelijst uitbreidbaar</td>
                            </tr>
                            <tr>
                               <th>Materiële geschiedenis</th>
@@ -810,9 +806,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_Putstabiliteit">
-                                    Putstabiliteit
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_Putstabiliteit">Putstabiliteit</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -1162,9 +1156,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_Beschermconstructie">
-                                    Beschermconstructie
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_Beschermconstructie">Beschermconstructie</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -1187,7 +1179,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d64390e5303"></a><section id="detail_d64390e5303">
+                     </section><a class="anchor" id="detail_d71853e5655"></a><section id="detail_d71853e5655">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1225,7 +1217,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64390e5488"></a><section id="detail_d64390e5488">
+                  </section><a class="anchor" id="detail_d71853e5840"></a><section id="detail_d71853e5840">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1262,7 +1254,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64390e5673"></a><section id="detail_d64390e5673">
+                  </section><a class="anchor" id="detail_d71853e6025"></a><section id="detail_d71853e6025">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1300,7 +1292,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64390e5858"></a><section id="detail_d64390e5858">
+                  </section><a class="anchor" id="detail_d71853e6210"></a><section id="detail_d71853e6210">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1337,7 +1329,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64390e6043"></a><section id="detail_d64390e6043">
+                  </section><a class="anchor" id="detail_d71853e6395"></a><section id="detail_d71853e6395">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1513,9 +1505,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_Registratiestatus">
-                                    Registratiestatus
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_Registratiestatus">Registratiestatus</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -2210,7 +2200,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d64390e11252"></a><section id="detail_d64390e11252">
+                     </section><a class="anchor" id="detail_d71853e12405"></a><section id="detail_d71853e12405">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2310,9 +2300,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_NaamGebeurtenis">
-                                    NaamGebeurtenis
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_NaamGebeurtenis">NaamGebeurtenis</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -2493,9 +2481,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_Referentiestelsel">
-                                    Referentiestelsel
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_Referentiestelsel">Referentiestelsel</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -2549,9 +2535,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_MethodeLocatiebepaling">
-                                    MethodeLocatiebepaling
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_MethodeLocatiebepaling">MethodeLocatiebepaling</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -2628,9 +2612,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_LokaalVerticaalReferentiepunt">
-                                    LokaalVerticaalReferentiepunt
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_LokaalVerticaalReferentiepunt">LokaalVerticaalReferentiepunt</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -2746,9 +2728,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_VerticaalReferentievlak">
-                                    VerticaalReferentievlak
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_VerticaalReferentievlak">VerticaalReferentievlak</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -2864,9 +2844,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_MethodePositiebepalingMaaiveld">
-                                    MethodePositiebepalingMaaiveld
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_MethodePositiebepalingMaaiveld">MethodePositiebepalingMaaiveld</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -3003,9 +2981,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_Referentiestelsel">
-                                    Referentiestelsel
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_Referentiestelsel">Referentiestelsel</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -3057,9 +3033,11 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td>
-                                 Coördinaattransformatie
-                                 </td>
+                              <td><a class="link" href="#detail_class_Model_Cordinaattransformatie">Coördinaattransformatie</a></td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Type</th>
+                              <td>Waardelijst uitbreidbaar</td>
                            </tr>
                            <tr>
                               <th>Materiële geschiedenis</th>
@@ -3196,9 +3174,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_Buistype">
-                                    Buistype
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_Buistype">Buistype</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -3601,9 +3577,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_Buisstatus">
-                                    Buisstatus
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_Buisstatus">Buisstatus</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -3696,9 +3670,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_MethodePositiebepalingBovenkantBuis">
-                                    MethodePositiebepalingBovenkantBuis
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_MethodePositiebepalingBovenkantBuis">MethodePositiebepalingBovenkantBuis</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -3750,9 +3722,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td>
-                                 IndicatieJaNeeOnbekend
-                                 </td>
+                              <td>IndicatieJaNeeOnbekend</td>
                            </tr>
                            <tr>
                               <th>Materiële geschiedenis</th>
@@ -4037,9 +4007,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_AanvulmateriaalBuis">
-                                    AanvulmateriaalBuis
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_AanvulmateriaalBuis">AanvulmateriaalBuis</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -4083,9 +4051,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_Buismateriaal">
-                                    Buismateriaal
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_Buismateriaal">Buismateriaal</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -4129,9 +4095,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_Lijm">
-                                    Lijm
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_Lijm">Lijm</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -4283,9 +4247,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_Kousmateriaal">
-                                    Kousmateriaal
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_Kousmateriaal">Kousmateriaal</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -4749,9 +4711,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td>
-                                 IndicatieJaNeeOnbekend
-                                 </td>
+                              <td>IndicatieJaNeeOnbekend</td>
                            </tr>
                            <tr>
                               <th>Materiële geschiedenis</th>
@@ -4923,9 +4883,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_AanvulmateriaalElektrode">
-                                    AanvulmateriaalElektrode
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_AanvulmateriaalElektrode">AanvulmateriaalElektrode</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -4977,9 +4935,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_Elektrodestatus">
-                                    Elektrodestatus
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_Elektrodestatus">Elektrodestatus</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
@@ -5253,9 +5209,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td><a class="link" href="#detail_class_Model_Buismateriaal">
-                                    Buismateriaal
-                                    </a></td>
+                              <td><a class="link" href="#detail_class_Model_Buismateriaal">Buismateriaal</a></td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Type</th>
