--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -223,9 +223,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td>
-                        KvK-nummer
-                        </td>
+                     <td>KvK-nummer</td>
                   </tr>
                   <tr>
                      <th>Regels</th>
@@ -282,9 +280,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_KaderAanlevering">
-                           KaderAanlevering
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_KaderAanlevering">KaderAanlevering</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -388,9 +384,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_KwaliteitsnormInrichting">
-                           KwaliteitsnormInrichting
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_KwaliteitsnormInrichting">KwaliteitsnormInrichting</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -505,9 +499,11 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td>
-                        InitiëleFunctie
-                        </td>
+                     <td><a class="link" href="#detail_class_Model_InitileFunctie">InitiëleFunctie</a></td>
+                  </tr>
+                  <tr>
+                     <th>&nbsp;&nbsp;Type</th>
+                     <td>Waardelijst uitbreidbaar</td>
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
@@ -786,9 +782,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_Putstabiliteit">
-                           Putstabiliteit
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_Putstabiliteit">Putstabiliteit</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -1138,9 +1132,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_Beschermconstructie">
-                           Beschermconstructie
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_Beschermconstructie">Beschermconstructie</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -1163,7 +1155,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d64390e5303"></a><section id="detail_d64390e5303">
+            </section><a class="anchor" id="detail_d71853e5655"></a><section id="detail_d71853e5655">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1201,7 +1193,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64390e5488"></a><section id="detail_d64390e5488">
+         </section><a class="anchor" id="detail_d71853e5840"></a><section id="detail_d71853e5840">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1238,7 +1230,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64390e5673"></a><section id="detail_d64390e5673">
+         </section><a class="anchor" id="detail_d71853e6025"></a><section id="detail_d71853e6025">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1276,7 +1268,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64390e5858"></a><section id="detail_d64390e5858">
+         </section><a class="anchor" id="detail_d71853e6210"></a><section id="detail_d71853e6210">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1313,7 +1305,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64390e6043"></a><section id="detail_d64390e6043">
+         </section><a class="anchor" id="detail_d71853e6395"></a><section id="detail_d71853e6395">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1489,9 +1481,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_Registratiestatus">
-                           Registratiestatus
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_Registratiestatus">Registratiestatus</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -2186,7 +2176,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d64390e11252"></a><section id="detail_d64390e11252">
+            </section><a class="anchor" id="detail_d71853e12405"></a><section id="detail_d71853e12405">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2286,9 +2276,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_NaamGebeurtenis">
-                           NaamGebeurtenis
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_NaamGebeurtenis">NaamGebeurtenis</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -2469,9 +2457,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_Referentiestelsel">
-                           Referentiestelsel
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_Referentiestelsel">Referentiestelsel</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -2525,9 +2511,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_MethodeLocatiebepaling">
-                           MethodeLocatiebepaling
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_MethodeLocatiebepaling">MethodeLocatiebepaling</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -2604,9 +2588,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_LokaalVerticaalReferentiepunt">
-                           LokaalVerticaalReferentiepunt
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_LokaalVerticaalReferentiepunt">LokaalVerticaalReferentiepunt</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -2722,9 +2704,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_VerticaalReferentievlak">
-                           VerticaalReferentievlak
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_VerticaalReferentievlak">VerticaalReferentievlak</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -2840,9 +2820,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_MethodePositiebepalingMaaiveld">
-                           MethodePositiebepalingMaaiveld
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_MethodePositiebepalingMaaiveld">MethodePositiebepalingMaaiveld</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -2979,9 +2957,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_Referentiestelsel">
-                           Referentiestelsel
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_Referentiestelsel">Referentiestelsel</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -3033,9 +3009,11 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td>
-                        Coördinaattransformatie
-                        </td>
+                     <td><a class="link" href="#detail_class_Model_Cordinaattransformatie">Coördinaattransformatie</a></td>
+                  </tr>
+                  <tr>
+                     <th>&nbsp;&nbsp;Type</th>
+                     <td>Waardelijst uitbreidbaar</td>
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
@@ -3172,9 +3150,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_Buistype">
-                           Buistype
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_Buistype">Buistype</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -3577,9 +3553,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_Buisstatus">
-                           Buisstatus
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_Buisstatus">Buisstatus</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -3672,9 +3646,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_MethodePositiebepalingBovenkantBuis">
-                           MethodePositiebepalingBovenkantBuis
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_MethodePositiebepalingBovenkantBuis">MethodePositiebepalingBovenkantBuis</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -3726,9 +3698,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td>
-                        IndicatieJaNeeOnbekend
-                        </td>
+                     <td>IndicatieJaNeeOnbekend</td>
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
@@ -4013,9 +3983,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_AanvulmateriaalBuis">
-                           AanvulmateriaalBuis
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_AanvulmateriaalBuis">AanvulmateriaalBuis</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -4059,9 +4027,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_Buismateriaal">
-                           Buismateriaal
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_Buismateriaal">Buismateriaal</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -4105,9 +4071,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_Lijm">
-                           Lijm
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_Lijm">Lijm</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -4259,9 +4223,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_Kousmateriaal">
-                           Kousmateriaal
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_Kousmateriaal">Kousmateriaal</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -4725,9 +4687,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td>
-                        IndicatieJaNeeOnbekend
-                        </td>
+                     <td>IndicatieJaNeeOnbekend</td>
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
@@ -4899,9 +4859,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_AanvulmateriaalElektrode">
-                           AanvulmateriaalElektrode
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_AanvulmateriaalElektrode">AanvulmateriaalElektrode</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -4953,9 +4911,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_Elektrodestatus">
-                           Elektrodestatus
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_Elektrodestatus">Elektrodestatus</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
@@ -5229,9 +5185,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td><a class="link" href="#detail_class_Model_Buismateriaal">
-                           Buismateriaal
-                           </a></td>
+                     <td><a class="link" href="#detail_class_Model_Buismateriaal">Buismateriaal</a></td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Type</th>
