--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.9</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230725-110228</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230725-110938</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -959,7 +959,7 @@
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
                               <td>
-                                 GUID
+                                 Putcode
                                  </td>
                            </tr>
                            <tr>
@@ -1179,7 +1179,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d71398e5663"></a><section id="detail_d71398e5663">
+                     </section><a class="anchor" id="detail_d71343e5659"></a><section id="detail_d71343e5659">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1217,7 +1217,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d71398e5848"></a><section id="detail_d71398e5848">
+                  </section><a class="anchor" id="detail_d71343e5844"></a><section id="detail_d71343e5844">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1254,7 +1254,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d71398e6033"></a><section id="detail_d71398e6033">
+                  </section><a class="anchor" id="detail_d71343e6029"></a><section id="detail_d71343e6029">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1292,7 +1292,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d71398e6218"></a><section id="detail_d71398e6218">
+                  </section><a class="anchor" id="detail_d71343e6214"></a><section id="detail_d71343e6214">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1329,7 +1329,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d71398e6403"></a><section id="detail_d71398e6403">
+                  </section><a class="anchor" id="detail_d71343e6399"></a><section id="detail_d71343e6399">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2200,7 +2200,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d71398e12505"></a><section id="detail_d71398e12505">
+                     </section><a class="anchor" id="detail_d71343e12501"></a><section id="detail_d71343e12501">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
